--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
              </li>
 			  <li>
                  <div class="xop-box xop-img5">
-                     <img src="https://i.postimg.cc/QdS9mp3f/undraw-working-late-pukg.png">
-					<center> <h3 style="font-family: abel;"> Drum Machine </h3><i class="fab fa-github 3x"></i></center>
+                     <img src="https://i.imgur.com/kFrHWbC.png">
+					<center> <h3 style="font-family: abel;"> Vinyl Player </h3><i class="fab fa-github 3x"></i></center>
 
                      </a>
                  </div>
